# FastFilter

./: .gitignore  ARCHITECTURE_AND_PAPER_SUMMARY_ZH.md  CMakeLists.txt  README.md  install.md  run_manual.sh
Prefix-Filter/: min_pd256.hpp
TC-Shortcut/: tc-sym.hpp
newFilter/: hash_images.py  main-built.cpp  main-fpp.cpp  main-perf.cpp  plot_results.py  plot_summary.py  run_all_hashes.sh  simdup_bench.hpp  simhash_4x16_filter.hpp
newHamming256/: main.cpp  plot_results.py  run_linux.sh
newfilter256/: REQUIREMENTS.md  bench.hpp  main-built.cpp  main-fpp.cpp  main-perf.cpp  prefix_filter_256.hpp  run_linux.sh
newfilter256_compact/: AGGRESSIVE_REFACTOR_PLAN.md  INSERT_CAPACITY_PLAN.md  REQUIREMENTS.md  bench.hpp  common.hpp  compact_filter_layer.hpp  compact_verify_layer.hpp  index.hpp  main-built.cpp  main-fpp.cpp  main-perf.cpp  plot_results.py  run_linux.sh
pfscripts/: Naming.py  build-all.csv
pfscripts/Inputs/: BBF-Fixed  Cuckoo-12  CuckooStable-12  SimdBlockFilter  TC-shortcut
scripts/: build-newfilter.csv  build-newfilter256compact.csv  fpp_table.csv  fpp_table_newfilter.csv  fpp_table_newfilter256compact.csv  hamming256-linearity-summary.txt  hamming256_linear.csv  test_file.txt
scripts/Inputs/: Cuckoo-8  NewFilter256Compact  NewFilter256Compact-confusion  NewFilter256Compact-fill  NewFilter256Compact-hitrate  Prefix-Filter [ BBF-Fixed ]  Prefix-Filter [ CuckooStable-12 ]  Prefix-Filter [ TC-shortcut ]  SimHash-4x16-3of4  SimHash-4x16-3of4-fill  SimHash-4x16-3of4-hitrate  SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  columbia_ahash.txt  columbia_dhash.txt  columbia_phash.txt  lg_ahash.txt  lg_dhash.txt  lg_phash.txt
scripts/results_columbia_ahash/: SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-columbia-ahash.csv  fpp_table_newfilter-columbia-ahash.csv
scripts/results_columbia_dhash/: SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-columbia-dhash.csv  fpp_table_newfilter-columbia-dhash.csv
scripts/results_columbia_phash/: SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-columbia-phash.csv  fpp_table_newfilter-columbia-phash.csv
scripts/results_lg_ahash/: SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-lg-ahash.csv  fpp_table_newfilter-lg-ahash.csv
scripts/results_lg_dhash/: SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-lg-dhash.csv  fpp_table_newfilter-lg-dhash.csv
scripts/results_lg_phash/: SimHash-4x16-OR  SimHash-4x16-OR-fill  SimHash-4x16-OR-hitrate  build-newfilter-lg-phash.csv  fpp_table_newfilter-lg-phash.csv
